# tomatelo-router

./: .gitattributes  .gitignore  CMakeLists.txt
cmake/: FindTBB.cmake
data/osrm/uruguay/: uruguay-latest.osrm.cnbg_to_ebg  uruguay-latest.osrm.ebg_nodes  uruguay-latest.osrm.enw  uruguay-latest.osrm.icd  uruguay-latest.osrm.level  uruguay-latest.osrm.names  uruguay-latest.osrm.nbg_nodes  uruguay-latest.osrm.properties  uruguay-latest.osrm.ramIndex  uruguay-latest.osrm.timestamp  uruguay-latest.osrm.tld  uruguay-latest.osrm.tls  uruguay-latest.osrm.turn_duration_penalties  uruguay-latest.osrm.turn_weight_penalties
src/: main.cpp
src/router/: Router.cpp
src/util/: split.cpp
